# cancer_rag

./: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
cancerrag/: annotator.py  databases.py  prompts.py
examples/: braf.json
tests/: __init__.py  test_annotator.py  test_databases.py  test_prompts.py
